# IntelliDoc-AI

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  start.sh
backend/: Dockerfile  init.sql  main.py  pyproject.toml  test_comprehensive.py  test_document.txt  test_prompts.py  test_real_docs.py  verify_prompts.py
backend/app/: __init__.py  config.py
backend/app/core/: __init__.py  celery_app.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  advanced_ocr_service.py  advanced_prompts.py  ai_service.py  document_service.py  ollama_ai_service.py  pdf_service.py  prompt_config.py  prompts.py
backend/app/tasks/: __init__.py  celery_queue.py  celery_tasks.py  queue.py  service.py
backend/app/utils/: cv2_compat.py
backend/storage/models/: .gitkeep
backend/storage/processed/: .gitkeep
backend/storage/temp/: .gitkeep
backend/storage/uploads/: .gitkeep
backend/storage/vectors/: .gitkeep
docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/messages/: de.json  en.json  es.json  fr.json  it.json  pr.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/app/[locale]/(App)/: layout.tsx  page.tsx
frontend/src/components/: ExternalLink.tsx  LocaleSwitcher.tsx  NotFoundPage.tsx  file-uploader.tsx
frontend/src/components/layout/: footer.tsx  header.tsx
frontend/src/components/sections/: hero.tsx
frontend/src/hooks/: useFileUpload.ts
frontend/src/i18n/: routing.ts
ml-models/: download-models.sh
ml-models/classification/: .gitkeep
ml-models/embeddings/: .gitkeep
ml-models/entity-extraction/: .gitkeep
ml-models/language-detection/: .gitkeep
monitoring/: docker-compose.monitoring.yml
monitoring/prometheus/: prometheus.yml
nginx/: nginx.conf
nginx/ssl/: .gitkeep
scripts/: backup.sh  dev-start.sh  init-ollama.sh  load-test.sh  migrate.sh  prod-deploy.sh  setup-ocr-deps.sh  setup.sh
