[project]
name = "intellidoc-ai-backend"
version = "0.1.0"
description = "IntelliDoc AI - Smart Document Intelligence Platform Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    # PDF & Image Processing
    "pdf2image>=1.16.3",
    "pypdf>=3.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    # OCR Engines & Text Processing
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    # AI/ML Stack
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    # NLP Libraries
    "langdetect>=1.0.9",
    "textblob>=0.17.1",
    # Utilities
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "opencv-python-headless>=4.11.0.86",
    "python-docx>=1.2.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
