[project]
name = "intellidoc-ai-backend"
version = "0.1.0"
description = "IntelliDoc AI - Smart Document Intelligence Platform Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    
    # Database & Caching
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    
    # Task Queue
    "celery>=5.3.4",
    
    # Object Storage
    "minio>=7.2.0",
    
    # PDF & Image Processing
    "pdf2image>=1.16.3",
    "pypdf>=3.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.11.0.86",
    
    # OCR Engines & Text Processing
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    
    # AI/ML Stack
    "torch>=2.0.0,<2.5.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "datasets>=2.14.6",
    
    # Ollama Integration
    "ollama>=0.3.0",
    
    # NLP Libraries
    "langdetect>=1.0.9",
    "textblob>=0.17.1",
    "nltk>=3.8.1",
    "spacy>=3.7.2",
    
    # Document Generation
    "python-docx>=1.2.0",
    "reportlab>=4.0.7",
    "openpyxl>=3.1.2",
    
    # Search & Vectors
    "elasticsearch>=8.11.0",
    "pgvector>=0.2.4",
    
    # Monitoring & Logging
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    
    # Security & Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
    "python-magic>=0.4.27",
    "pandas>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
